fix gapping

--- a/src/site/deception.css
+++ b/src/site/deception.css
@@ -21,7 +21,6 @@
       margin-top: 1rem;
     }
 
-    mark+span,
     span+span {
       margin-left: 0.3rem;
     }
@@ -74,6 +73,11 @@
       margin-bottom: 0;
     }
 
+    mark+span,
+    span+.verse {
+      margin-left: 0.3rem;
+    }
+
     .verse {
       /* fix android chrome */
       display: inline;
@@ -81,6 +85,10 @@
       span.body {
         background: #322;
         color: #ff8;
+      }
+
+      em {
+        color: #0ff;
       }
     }
   }
